@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add resent information to message header display.
 * [mms] Added an option to the mailboxList API call to force inclusion of unsubscribed mailboxes.
 * [mms] Asynchronously load the mailbox list on the advanced search page.
 * [mms] Automatically try to rotate embedded inline images when displaying a message.
