@@ -2,6 +2,7 @@
 v7.0.0-git
 ----------
 
+[mms] Add resent information to message header display.
 [mms] Added an option to the mailboxList API call to force inclusion of
       unsubscribed mailboxes.
 [mms] Asynchronously load the mailbox list on the advanced search page.
